# LogicGateSimulator

./: .gitignore  CMakeLists.txt  README.md
inc/: Asset_loader.h  Camera.h  Chip.h  GUI.h  GUI_Controller.h  Sandbox.h
inc/Simple2D/: Simple2D.h  Simple2D_GUI.h  Simple2D_Sprite.h  Simple2D_Text.h
src/: Asset_loader.cpp  Camera.cpp  Chip.cpp  GUI.cpp  GUI_Controller.cpp  Main.cpp  Sandbox.cpp
src/Simple2D/: Simple2D.cpp  Simple2D_GUI.cpp  Simple2D_Sprite.cpp  Simple2D_Text.cpp
